libcfs/libcfs/tracefile.c
@@ -397,7 +397,7 @@ console:
 	if (cdls != NULL) {
 		if (libcfs_console_ratelimit &&
 		    cdls->cdls_next != 0 &&	/* not first time ever */
-		    time_after(jiffies, cdls->cdls_next)) {
+		    time_before(jiffies, cdls->cdls_next)) {
 			/* skipping a console message */
 			cdls->cdls_count++;
 			if (tcd != NULL)
