lustre/tests/sanity.sh
@@ -6281,18 +6281,19 @@ test_60b() { # bug 6411
 	[ $PARALLEL == "yes" ] && skip "skip parallel run"
 
 	dmesg > $DIR/$tfile
-	LLOG_COUNT=$(dmesg | awk "/$TEST60_HEAD/ { marker = 1; from_marker = 0; }
-				/llog.test/ {
-					if (marker)
-						from_marker++
-					from_begin++
-				}
-				END {
-					if (marker)
-						print from_marker
-					else
-						print from_begin
-				}")
+	LLOG_COUNT=$(do_facet mgs dmesg |
+		     awk "/$TEST60_HEAD/ { marker = 1; from_marker = 0; }
+			  /llog_[a-z]*.c:[0-9]/ {
+				if (marker)
+					from_marker++
+				from_begin++
+			  }
+			  END {
+				if (marker)
+					print from_marker
+				else
+					print from_begin
+			  }")
 	[[ $LLOG_COUNT -gt 100 ]] &&
 		error "CDEBUG_LIMIT not limiting messages ($LLOG_COUNT)" || true
 }
